--- a/astrogrid/portalB/src/cocoon/blocks.properties
+++ b/astrogrid/portalB/src/cocoon/blocks.properties
@@ -37,11 +37,11 @@
 #exclude.block.jsp=
 #exclude.block.php=
 #exclude.block.python=
-#exclude.block.lucene=        
+#exclude.block.lucene=
 #exclude.block.html=
 #exclude.block.linkrewriter=
 #exclude.block.bsf=
-#exclude.block.profiler=        
+#exclude.block.profiler=
 #exclude.block.velocity=
 #exclude.block.web3=
 #exclude.block.slide=
@@ -58,8 +58,8 @@
 # its development as thing might change over time before they are marked
 # stable.
 
-exclude.block.proxy=
-exclude.block.asciiart=
-exclude.block.precept=
-exclude.block.mail=
-exclude.block.axis=
+exclude.block.proxy=true
+exclude.block.asciiart=true
+exclude.block.precept=true
+exclude.block.mail=true
+exclude.block.axis=true
